# aas-types

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: lib.rs  utilities.rs
src/part_1/: mod.rs
src/part_1/v3_1/: environment.rs  id_short.rs  key.rs  level_type.rs  mod.rs  reference.rs  value_list.rs
src/part_1/v3_1/attributes/: administrative_information.rs  data_specification.rs  extension.rs  identifiable.rs  kind.rs  mod.rs  qualifiable.rs  referable.rs  semantics.rs
src/part_1/v3_1/core/: asset_administration_shell.rs  mod.rs  submodel.rs
src/part_1/v3_1/primitives/: data_type_def_xs.rs  identifier.rs  label.rs  lang_string.rs  message_topic.rs  mod.rs
src/part_1/v3_1/submodel_elements/: basic_event.rs  blob.rs  capability.rs  data_element.rs  entity.rs  file.rs  mod.rs  multi_language_property.rs  operation.rs  property.rs  range.rs  reference_element.rs  relationship_element.rs  submodel_element_collection.rs  submodel_element_list.rs
tests/: aas.json  env.json
