[package]
name = "aas"
version = "0.1.1"
edition = "2024"
authors = ["Fynn Kleine <code@onlyfynns.de>"]
license = "MIT"
description = "Data type bindings for the Asset Administration Shell Specs"

[dependencies]
oxilangtag = { version = "0.1.5", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.145", features = ["arbitrary_precision"] }
strum = { version = "0.27.2", features = ["derive"] }
thiserror = "2.0.17"
serde_with = { version = "3.15.1", features = ["base64"] }
chrono = { version = "0.4.42", features = ["serde"] }
iref = { version = "3.2.2", features = ["serde"] }
bigdecimal = { version = "0.4.9", features = ["serde", "serde-json"] }
